# Mca4thsemminiproject

app/backend/: __main__.py  app.py  pyproject.toml  routes.py  services.py
app/backend/routes/: main_routes.py  test_routes.py
app/frontend/: components.json  package-lock.json  package.json  vite.config.js
app/frontend/src/: App.jsx  index.css  main.jsx
app/frontend/src/components/: file-upload-form-3.jsx  mode-toggle.jsx  output-card.jsx  skeleton-loading.jsx  theme-provider.jsx
app/frontend/src/components/ui/: file-upload.jsx
src/: pyproject.toml
